syntax = "proto3";

option java_package = "xyz.srclab.spring.boot.proto";
option java_outer_classname = "ProtoMessage";
option java_multiple_files = true;

message RequestMessage {
    string id = 1;
    MessageData data = 2;
}

message ResponseMessage {
    string code = 1;
    string state = 2;
    MessageData data = 3;
}

message MessageData {
    enum Type {
        TYPE_0 = 0;
        TYPE_1 = 1;
    }
    Type type = 1;
    string message = 2;
    repeated string number = 3;
    map<string, string> entry = 4;
}

service MessageService {
    rpc Query(RequestMessage) returns (ResponseMessage);
}